# potpourri3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  cibuildwheel_config.toml  publish.yml  test_build.yml  test_linux.yml  test_macos.yml  test_windows.yml
src/cpp/: core.cpp  core.h  heat_helpers.cpp  heat_helpers.h  io.cpp  mesh.cpp  point_cloud.cpp
src/potpourri3d/: __init__.py  core.py  io.py  mesh.py  point_cloud.py
test/: bunny_poly.ply  bunny_small.ply  potpourri3d_test.py  sample.py
