[project]
name = "potpourri3d"
version = "1.3"
description = "An invigorating blend of 3D geometry tools in Python." 
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Nicholas Sharp", email = "nmwsharp@gmail.com" },
]
maintainers = [
  {  name = "Nicholas Sharp", email = "nmwsharp@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"

dependencies = [
  "numpy",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/nmwsharp/potpourri3d"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"